refactor(api, mobile): update entry and stop price handling and enhance trade preview logic  to support live trade bill
